istio-rules/11a-helloworld-service-v1-permissive.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-service
spec:
  hosts:
  - helloworld-service
  http:
  - route:
    - destination:
        host: helloworld-service
        subset: v1
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-service
spec:
  host: helloworld-service
  subsets:
  - name: v1
    labels:
      version: "1.0"
  - name: v2
    labels:
      version: "2.0"
