istio-rules/11b-helloworld-service-mirror.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-service
spec:
  hosts:
  - helloworld-service
  http:
  - route:
    - destination:
        host: helloworld-service
        subset: v1
      weight: 100
    mirror:
      host: helloworld-service
      subset: v2
