istio-rules/12c-service-strict-mtls-encrypt.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: "istio-demo-app"
spec:
  host: "guestbook-service.istio-demo-app.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
