istio-rules/2-virtual-svc-backend.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook-service
spec:
  hosts:
  - "*"
  gateways:
  - guestbook-gateway
  http:
  - match:
    - uri:
        prefix: /backend
    route:
    - destination:
        host: guestbook-service
