istio-rules/4-dest-rules-permissive.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: guestbook-ui
spec:
  host: guestbook-ui
  subsets:
  - name: v1
    labels:
      version: "1.0"
  - name: v2
    labels:
      version: "2.0"

  # trafficPolicy:
  #   loadBalancer:
  #     # simple: one of ROUND_ROBIN, RANDOM, LEAST_CONN
  #     consistentHash:
  #       # useSourceIp: true
  #       httpHeaderName: my-header
  #       # httpCookie:
  #       #   name: user
  #       #   ttl: 300s
