istio-rules/7b-clean-initial-state.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook-ui
spec:
  hosts:
  - "*"
  gateways:
  - guestbook-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: guestbook-ui
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: guestbook-ui
spec:
  host: guestbook-ui
  subsets:
  - name: v1
    labels:
      version: "1.0"
