istio-rules/8.2-guestbook-service-delay-optional.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook-service
spec:
  hosts:
  - guestbook-service
  http:
  - route:
    - destination:
        host: guestbook-service
    fault:
      delay:
        percent: 50
        fixedDelay: 2s
