istio-rules/9-guestbook-service-timeout-optional.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook-service
spec:
  hosts:
  - guestbook-service
  http:
  - route:
    - destination:
        host: guestbook-service
    timeout: 2s
    fault:
      delay:
        percent: 100
        fixedDelay: 4s
