istio-rules/9a-guestbook-service-clean-state-optional.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook-service
spec:
  hosts:
  - guestbook-service
  http:
  - route:
    - destination:
        host: guestbook-service
